tests/fixtures/pass/inherent_reset_and_constant.sali
let Counter = struct(value: i32)

extend Counter {
  let reset(mut borrow self)(): () = {
    self.value = 0
  }

  let answer = 42
}

let main(): i32 = {
  let mut counter = Counter(41)
  counter.reset()
  counter.value + Counter.answer
}
