tests/fixtures/fail/inherent_duplicate_associated.sali
let A = struct(value: i32)

extend A {
  let answer = 41
}

extend A {
  let answer(): i32 = 42
}

let main(): i32 = 0
